src/App.css
h2, h3, h4, input{
  color: #ffcc00;
  margin: 0;
}

h2, input {
  font-size: calc(2*88px);
  letter-spacing: 18px;
}

h2, input {
  margin-right: -15px;
}

@media only screen and (max-width: 1092px) {
  h2, input {
    font-size: 80px;
    letter-spacing: 8px;
  }
}

@media only screen and (max-width: 787px) {
  h2, input {
    font-size: 48px;
    letter-spacing: 6px;
  }
}

h3 {
  font-size: calc(0.25*88px);
}

h3::before {
  content: '[ ';
}

h3::after {
  content: ' ]';
}

h4 {
  min-height: 41px;
  font-size: 28px;
  letter-spacing: 100px;
  margin-right: -90px;
}

@media only screen and (max-width: 1092px) {
  h3 {
    font-size: 20px;
  }

  h4 {
    font-size: 20px;
    letter-spacing: 40px;
    margin-right: -30px;
  }
}

@media only screen and (max-width: 787px) {
  h3 {
    font-size: 15px;
  }

  h4 {
    font-size: 18px;
    letter-spacing: 20px;
    margin-right: -10px;
  }
}

main button {
  margin-top: 50px;
}

button {
  background-color: #ffcc00;
  border: none;
  border-radius: 20px;
  font-size: 30px;
  color: #fff;
  padding: 0 40px;
  outline: none;
  cursor: pointer;
}

button:disabled,
button[disabled] {
  cursor: not-allowed;
  background-color: #ffdb4a;
}

button.back {
  background-color: #f4c400;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  padding: 0 20px;
}

button.forward {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

